Season型コンテンツ作成API実装
